cmake_minimum_required(VERSION 3.17)
project(DSL_assignments)

set(CMAKE_CXX_STANDARD 14)

add_executable(DSL_assignments
         "BST/my_tree.cpp"
#         "BST/my_tree.h"
#         "dynamic programming/longest increasing subsequence (dp).cpp"
#         "dynamic programming/longest_increasing_subseq (greedy optimized).cpp"
        )
